finished postgres_manager, changed volume type in docker-compose

--- a/scrapy_autoproxy/data/config/autoproxy.cfg
+++ b/scrapy_autoproxy/data/config/autoproxy.cfg
@@ -12,7 +12,9 @@ port = 5379
 password = somepassword
 
 [settings]
-proxy_interval=1800,
+seed_queue_id = 1
+aggregate_queue_id = 2
+proxy_interval=1800
 max_db_connect_attempts = 10
 db_connect_attempt_interval = 15
 allowed_bad_requests = 4
