--- a/scrapy_autoproxy/data/docker-compose.yml
+++ b/scrapy_autoproxy/data/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
       - "${REDIS_PORT}:6379"
-    container_name: "autoproxy_redis"
+    container_name: "autoproxy_mw_redis"
   db:
     image: "postgres"
 
-    container_name: "autoproxy_db"
+    container_name: "autoproxy_mw_db"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -17,7 +17,8 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-      - ./database:/var/lib/postgresql/data
-      - ./data/init_sql:/docker-entrypoint-initdb.d
+      - ./init_sql:/docker-entrypoint-initdb.d
+      - autoproxy_mw_pgdata:/var/lib/postgresql/data
 volumes:
-  pgdata:
+  autoproxy_mw_pgdata:
+
