initial sync working

--- a/scrapy_autoproxy/data/config/autoproxy.cfg
+++ b/scrapy_autoproxy/data/config/autoproxy.cfg
@@ -19,6 +19,7 @@ max_db_connect_attempts = 10
 db_connect_attempt_interval = 15
 allowed_bad_requests = 4
 blacklist_time = 86400
+max_blacklist_count = 10
 decrement_blacklist = True
 seed_queue = 1
 aggregate_queue = 2
